# Projekty

./: Algorytm_Kruskala.cpp  Proj2.cpp  README.md  candlestick.cpp
biblioteka_cpp2python/: CMakeLists.txt  Projekt3.ipynb  example.cpp
